commit for css  practice story

--- a/practice-story.html
+++ b/practice-story.html
@@ -1,25 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="reset.css">
+    <link rel="stylesheet" type="text/css" href="practice-story.css">
 </head>
 <body>
-    <h4>
-        OPEN THREADS
-    </h4>
-    <h1>
-        Ranking the Spurs starting five
-    </h1>
-    <h2>
-        Bleacher Report released their rankings for all 30 NBA teams
-    </h2>
-    <p>
-        By Jeph Duarte <a href="https://twitter.com/jeph_duarte" target="_blank">@jeph_duarte</a> <span>Aug 5, 2018, 6:00am CDT</span> 
-    </p>
-    <img src="spurs.jpg" alt="Sprus">
+    <article>
+    <h4>OPEN THREADS</h4>
+    <h1>Ranking the Spurs starting five</h1>
+    <h2>Bleacher Report released their rankings for all 30 NBA teams</h2>
+    <p class="byline">By <a href="https://twitter.com/jeph_duarte" target="_blank">Jeph Duarte</a> <span>Aug 5, 2018, 6:00am CDT</span></p>
+    <img src="spurs.jpg" alt="Sprus" width="620px">
     <p class="credit">
     Soobum Im / USA TODAY Sports    
     </p>
@@ -99,6 +95,6 @@
         Our community guidelines apply which should remind everyone to be cool, avoid personal attacks, not to troll and to watch the language.
         </p>
     </div>
-
+    </article>
 </body>
 </html>
